--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -15,8 +15,8 @@
     <string name="quake_details_magnitud_local">Magnitude local (Ml)</string>
     <string name="quake_details_magnitud_momento">Moment magnitude (Mw)</string>
     <string name="icono_sensible">Sensitive icon</string>
-    <string name="FIREBASE_CHANNEL_NAME_QUAKES">Quake alerts</string>
-    <string name="FIREBASE_CHANNEL_DESCRIPTION_QUAKES">Receives quake alerts above 5 degrees</string>
+    <string name="firebase_channel_name_quakes">Quake alerts</string>
+    <string name="firebase_channel_description_quakes">Receives quake alerts above 5 degrees</string>
     <string name="last_quakes_info_card_view_tittle">Last quakes</string>
     <string name="last_quakes_info_card_view_button">OK</string>
     <string name="coordenadas_oeste">W</string>
@@ -34,9 +34,9 @@
     <string name="quake_time_day_info_windows">%1$d d ago</string>
     <string name="profundidad_info_windows">Depth: %.1f Km</string>
     <string name="settings">Settings</string>
-    <string name="FIREBASE_PREF_KEY_TOAST_ALERTAS_OFF">Alerts disabled</string>
-    <string name="FIREBASE_PREF_KEY_TOAST_ALERTAS_ON">Alerts enabled</string>
-    <string name="NIGHT_MODE_KEY_TOAST_ON">Night mode on</string>
+    <string name="firebase_pref_key_alert_off">Alerts disabled</string>
+    <string name="firebase_pref_key_alert_on">Alerts enabled</string>
+    <string name="night_mode_key_toast_on">Night mode on</string>
     <string name="alert_pref_summary_off">Disabled</string>
     <string name="alert_pref_title">Notifications</string>
     <string name="alert_pref_title_switch">Quake alerts</string>
@@ -49,7 +49,7 @@
     <string name="night_mode_pref_title">Night mode</string>
     <string name="tab_map">Map</string>
     <string name="tab_list">Quakes</string>
-    <plurals name="LIST_QUAKE_NUMBER_SUMMARY">
+    <plurals name="list_quake_number_summary">
         <item quantity="one">Last %d quake</item>
         <item quantity="other">Last %d quakes</item>
     </plurals>
@@ -65,7 +65,7 @@
     <string name="m_xima_magnitud">Maximum magnitude</string>
     <string name="m_nima_profundidad">Minimum depth</string>
     <string name="top_ciudades_con_m_s_sismos">Top cities with the most earthquakes</string>
-    <string name="FORMATO_REPORTE" formatted="false">%s %s</string>
+    <string name="REPORT_FORMAT" formatted="false">%s %s</string>
     <string name="JAN">January</string>
     <string name="FEB">February</string>
     <string name="MAR">March</string>
@@ -78,8 +78,8 @@
     <string name="OCT">October</string>
     <string name="NOV">November</string>
     <string name="DEC">December</string>
-    <string name="INTENT_CHOOSER">Share quakes</string>
-    <string name="NIGHT_MODE_KEY_TOAST_OFF">Night mode off</string>
+    <string name="intent_chooser">Share quakes</string>
+    <string name="night_mode_key_toast_off">Night mode off</string>
     <string name="version">"Version "</string>
     <string name="solucionamos_el_problema">Solved things</string>
     <string name="entendido">OK</string>
@@ -89,6 +89,8 @@
     <string name="estilo_mapa">Map style</string>
     <string name="icono_aplicacion_publicidad">Ad icon</string>
     <string name="ver_m_s">Visit site</string>
-    <string name="HTTP_ERROR">Oops, something went wrong!</string>
-    <string name="IO_ERROR">Check your internet connection</string>
+    <string name="http_error">Oops, something went wrong!</string>
+    <string name="io_error">Check your internet connection</string>
+    <string name="icon_ad_app">Icon ad app</string>
+    <string name="snackbar_retry">Retry</string>
 </resources>
