--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -15,8 +15,8 @@
     <string name="quake_details_magnitud_local">Magnitud local (Ml)</string>
     <string name="quake_details_magnitud_momento">Magnitud Momento (Mw)</string>
     <string name="icono_sensible">Icono sensible</string>
-    <string name="FIREBASE_CHANNEL_NAME_QUAKES">Alerta sismos</string>
-    <string name="FIREBASE_CHANNEL_DESCRIPTION_QUAKES">Recibe alertas de sismos sobre 5 grados</string>
+    <string name="firebase_channel_name_quakes">Alerta sismos</string>
+    <string name="firebase_channel_description_quakes">Recibe alertas de sismos sobre 5 grados</string>
     <string name="last_quakes_info_card_view_tittle">Últimos sismos</string>
     <string name="last_quakes_info_card_view_button">Entendido</string>
     <string name="coordenadas_oeste">O</string>
@@ -34,9 +34,9 @@
     <string name="quake_time_second_info_windows">Hace: %1$d s</string>
     <string name="profundidad_info_windows">Profundidad: %.1f km</string>
     <string name="settings">Configuración</string>
-    <string name="FIREBASE_PREF_KEY_TOAST_ALERTAS_OFF">Alertas desactivadas</string>
-    <string name="FIREBASE_PREF_KEY_TOAST_ALERTAS_ON">Alertas activadas</string>
-    <string name="NIGHT_MODE_KEY_TOAST_ON">Modo noche activado</string>
+    <string name="firebase_pref_key_alert_off">Alertas desactivadas</string>
+    <string name="firebase_pref_key_alert_on">Alertas activadas</string>
+    <string name="night_mode_key_toast_on">Modo noche activado</string>
     <string name="alert_pref_summary_off">Desactivadas</string>
     <string name="alert_pref_summary_on">Activadas</string>
     <string name="alert_pref_title">Notificaciones</string>
@@ -49,7 +49,7 @@
     <string name="night_mode_pref_title">Modo noche</string>
     <string name="tab_map">Mapa</string>
     <string name="tab_list">Sismos</string>
-    <plurals name="LIST_QUAKE_NUMBER_SUMMARY">
+    <plurals name="list_quake_number_summary">
         <item quantity="one">Último %d sismo</item>
         <item quantity="other">Últimos %d sismos</item>
     </plurals>
@@ -77,9 +77,9 @@
     <string name="OCT">Octubre</string>
     <string name="NOV">Noviembre</string>
     <string name="DEC">Diciembre</string>
-    <string name="FORMATO_REPORTE" formatted="false">%s %s</string>
-    <string name="INTENT_CHOOSER">Compartir sismos</string>
-    <string name="NIGHT_MODE_KEY_TOAST_OFF">Modo noche desactivado</string>
+    <string name="REPORT_FORMAT" formatted="false">%s %s</string>
+    <string name="intent_chooser">Compartir sismos</string>
+    <string name="night_mode_key_toast_off">Modo noche desactivado</string>
     <string name="version">"Versión "</string>
     <string name="qu_hay_de_nuevo_en_la_app">¿Qué hay de nuevo en la app?</string>
     <string name="solucionamos_el_problema">Solucionamos el problema</string>
@@ -89,6 +89,8 @@
     <string name="estilo_mapa">Estilo Mapa</string>
     <string name="icono_aplicacion_publicidad">Icono aplicacion publicidad</string>
     <string name="ver_m_s">Ver más</string>
-    <string name="HTTP_ERROR">Ups, algo funcionó mal!</string>
-    <string name="IO_ERROR">Revisa tu conexión a Internet</string>
+    <string name="http_error">Ups, algo funcionó mal!</string>
+    <string name="io_error">Revisa tu conexión a Internet</string>
+    <string name="icon_ad_app">Icono publicidad</string>
+    <string name="snackbar_retry">Recargar</string>
 </resources>
