ChangeLog no se muestra en la primera instalacion, se agrega apartado acerca en la app y se agrega contacto desarrollador y version de la app
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 3 hours 23 minutes

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -93,4 +93,9 @@
     <string name="io_error">Check your internet connection</string>
     <string name="icon_ad_app">Icon ad app</string>
     <string name="snackbar_retry">Retry</string>
+    <string name="version_key">version</string>
+    <string name="about_msg">LastQuakeChile, allows you to quickly view the latest earthquakes in Chile</string>
+    <string name="contact_developer">Contact developer</string>
+    <string name="contact_summary">Suggestions? Problems?</string>
+    <string name="about">About</string>
 </resources>
