--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -98,4 +98,6 @@
     <string name="contact_developer">Contact developer</string>
     <string name="contact_summary">Suggestions? Problems?</string>
     <string name="about">About</string>
+    <string name="no_apagado">Wifi turn off</string>
+    <string name="wifi_off_msg">Check your connection</string>
 </resources>
