--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -98,4 +98,6 @@
     <string name="contact_developer">Contacto desarrollador</string>
     <string name="contact_summary">¿Sugerencias? ¿Problemas?</string>
     <string name="about">Acerca</string>
+    <string name="no_apagado">Wifi apagado</string>
+    <string name="wifi_off_msg">Por favor, revisa tu conexión</string>
 </resources>
