Correcciones de strings, localDateTimeToTextView y externalizacion de strings para shareQuake
Signed-off-by: Felipe González Alarcón <felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 30 minutes

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -100,4 +100,12 @@
     <string name="about">About</string>
     <string name="no_apagado">Wifi turn off</string>
     <string name="wifi_off_msg">Check your connection</string>
+    <string name="SHARE_TITLE">Seismic alert</string>
+    <string name="SHARE_SUB_TITLE">Seismological information</string>
+    <string name="SHARE_CITY">City</string>
+    <string name="SHARE_LOCAL_HOUR">Local Hour</string>
+    <string name="SHARE_MAGNITUDE">Magnitude</string>
+    <string name="SHARE_DEPTH">Depth</string>
+    <string name="SHARE_GEO_REF">Georeference</string>
+    <string name="SHARE_DOWNLOAD_MSG"><![CDATA[Download the app here ->]]></string>
 </resources>
