Leaks de memoria reparados para injecciones de Koin y archivos gradle transformados a kotlin DSL
Signed-off-by: Felipe González Alarcón <felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 48 minutes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name" translatable="false">LastQuakeChile</string>
 
     //TODO: Cambiar por figonzal
-    <string name="API_URL" translatable="false">https://lastquakechile-server-prod.herokuapp.com</string>
+    <string name="API_URL" translatable="false">https://www.figonzal.cl</string>
 
     <string name="ADMOB_MASTER_KEY" translatable="false">ca-app-pub-6355378855577476~7414287525</string>
 
